--- a/css/creative.css
+++ b/css/creative.css
@@ -305,14 +305,14 @@ header.masthead p {
 
 .btn-primary {
   background-color: #B3DDF2;
-  border-color: #FF0000;
+  border-color: #F05F40;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   color: #fff;
-  background-color: #FF0000 !important;
+  background-color: #ee4b28 !important;
 }
 
 .btn-primary:active, .btn-primary:focus {
-  box-shadow: 0 0 0 0.2rem rgba(255, 0, 0, 0.5) !important;
+  box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
 }
